@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-# @(#) $RCSfile: sigtran,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2006/10/31 20:34:25 $
+# @(#) $RCSfile: sigtran,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2007/03/09 04:39:14 $
 # Copyright (c) 2001-2006  OpenSS7 Corporation <http://www.openss7.com>
 # Copyright (c) 1997-2000  Brian F. G. Bidulock <bidulock@openss7.org>
 # All Rights Reserved.
@@ -103,8 +103,8 @@ fi
 # Specify defaults
 
 [ -n "$SIGTRAN_PRELOAD"       ] || SIGTRAN_PRELOAD=""
-[ -n "$SIGTRAN_DRIVERS"       ] || SIGTRAN_DRIVERS=""
-[ -n "$SIGTRAN_MODULES"       ] || SIGTRAN_MODULES="streams-m2pa_sl"
+[ -n "$SIGTRAN_DRIVERS"       ] || SIGTRAN_DRIVERS="streams-ua_as streams-m2ua_as streams-m3ua_as streams-sua_as streams-tua_as streams-isua_as"
+[ -n "$SIGTRAN_MODULES"       ] || SIGTRAN_MODULES="streams-m2pa_sl streams-sdl_sctp streams-sdt_sctp streams-sdt_tpi streams-sl_tpi streams-sl_sctp streams-m2tp"
 [ -n "$SIGTRAN_MAKEDEVICES"   ] || SIGTRAN_MAKEDEVICES="yes"
 [ -n "$SIGTRAN_REMOVEDEVICES" ] || SIGTRAN_REMOVEDEVICES="yes"
 
@@ -270,7 +270,7 @@ esac
 
 # =============================================================================
 # 
-# @(#) $RCSfile: sigtran,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2006/10/31 20:34:25 $
+# @(#) $RCSfile: sigtran,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2007/03/09 04:39:14 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -315,11 +315,14 @@ esac
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/10/31 20:34:25 $ by $Author: brian $
+# Last Modified $Date: 2007/03/09 04:39:14 $ by $Author: brian $
 #
 # -----------------------------------------------------------------------------
 #
 # $Log: sigtran,v $
+# Revision 0.9.2.3  2007/03/09 04:39:14  brian
+# - update module list
+#
 # Revision 0.9.2.2  2006/10/31 20:34:25  brian
 # - more buildup of test suite
 #
