@@ -6,8 +6,8 @@
 # really needs to be a '.in' file.
 #SIGTRAN_MODULES="@SIGTRAN_MODULES@"
 SIGTRAN_PRELOAD=""
-SIGTRAN_DRIVERS=""
-SIGTRAN_MODULES="streams-m2pa_sl"
+SIGTRAN_DRIVERS="streams-ua_as streams-m2ua_as streams-m3ua_as streams-sua_as streams-tua_as streams-isua_as"
+SIGTRAN_MODULES="streams-m2pa_sl streams-sdl_sctp streams-sdt_sctp streams-sdt_tpi streams-sl_tpi streams-sl_sctp streams-m2tp"
 # Make real character devices before intializing subsystem?
 SIGTRAN_MAKEDEVICES='no'
 # Remove devices after removing subsystem?
@@ -15,7 +15,7 @@ SIGTRAN_REMOVEDEVICES='no'
 
 # =============================================================================
 # 
-# @(#) $RCSfile: sigtran.in,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2006/10/31 20:34:26 $
+# @(#) $RCSfile: sigtran.in,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2007/03/09 04:39:17 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -60,11 +60,14 @@ SIGTRAN_REMOVEDEVICES='no'
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/10/31 20:34:26 $ by $Author: brian $
+# Last Modified $Date: 2007/03/09 04:39:17 $ by $Author: brian $
 #
 # -----------------------------------------------------------------------------
 #
 # $Log: sigtran.in,v $
+# Revision 0.9.2.3  2007/03/09 04:39:17  brian
+# - update module list
+#
 # Revision 0.9.2.2  2006/10/31 20:34:26  brian
 # - more buildup of test suite
 #
